# floodMonitor

./: .env  pyproject.toml  requirements.txt
.github/: cron_job.yaml
.github/workflows/: cron_job.yaml
src/: datapoint.py  main.py  make_report.py  process_data.py  scrape_web.py  send_email.py
